--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
 
 
-    <title>Arthur Pace</title>
+    <title>Abdoulaye DIALLO</title>
     <link rel="icon" href="images/fav-icon.png">
 
     <!--APPLE TOUCH ICON-->
@@ -142,15 +142,11 @@
 
                                 <!--LINKS-->
                                 <div class="links">
-                                    <!-- FACEBOOK-->
-                                    <a href="#" id="first_one"
-                                       class="social btn-floating indigo"><i
-                                            class="fa fa-facebook"></i></a>
                                     <!-- TWITTER-->
-                                    <a href="https://twitter.com/jorjarthur" class="social  btn-floating blue"><i
+                                    <a href="https://twitter.com/dataflowus" class="social  btn-floating blue"><i
                                             class="fa fa-twitter"></i></a>
                                     <!-- LINKEDIN-->
-                                    <a href="https://www.linkedin.com/in/pacearthur/" class="social  btn-floating blue darken-3"><i
+                                    <a href="https://www.linkedin.com/in/abdoulsn/" class="social  btn-floating blue darken-3"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
                             </div>
@@ -175,7 +171,7 @@
                         <!-- ABOUT PARAGRAPH -->
                         <p>
                             I'm Abdoulaye. data science student at Université Paris 8, I'm interested in machine learning research for development.
-                            I'm graduated in Statistics and Business intelligence at Université de Bambey, Senegal where I've take a many courses in mathematics
+                            I'm graduated in Statistics and Business intelligence at Université de Bambey, Senegal where I've taken a many courses in mathematics
                             and Statistics. I've done two intern in Senegal before I'm move to France. 
                             currently intern at LIASD laboratory at my main University in Saint-Denis, France.
                         </p>
@@ -253,10 +249,9 @@
                             I've graduated in this University for my bachelor and master, I've worked in many project which the University is involed for
                             local development. Thes was our main courses.
                             
-                            <br><br><li><b>Statistics: Modelisation, Estimation and Test ,Survey methods, Data analysis</b></li>
+                            <br><br><li><b>Statistics: Modelisation, Estimation and Test, Survey methods, Data analysis</b></li>
                             <br><li><b>mathematics: Probabilty, Algebra, time series </b></li>
-                            <br><li><b>Data analysis: R STATA SPSS SAS </b></li>
-                            <br><li><b>Web development (HTML5 CSS3 MYSQL)</b></li>
+                            <br><li><b>Data Explolatory: R STATA SPSS SAS SQL </b></li>
                             <br><li><b>Information systems management</b></li>
                         </p>
                     </div>
@@ -494,31 +489,6 @@
                 </div>
             </div>
 
-            <!-- THIRD TIMELINE -->
-            <div class="timeline-block">
-                <!-- DOT -->
-                <div class="timeline-dot"><h6>U</h6></div>
-                <!-- TIMELINE CONTENT -->
-                <div class="card timeline-content">
-                    <div class="card-content">
-                        <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Web development</h6>
-                        <!-- TIMELINE TITLE INFO -->
-                        <div class="timeline-info">
-                            <h6>
-                                <small>National Central University</small>
-                            </h6>
-                            <h6>
-                                <small>Sep 2018 - Jan 2019</small>
-                            </h6>
-                        </div>
-                        <!-- TIMELINE PARAGRAPH -->
-                        <p>
-                            As part of my studies in Taiwan I have created a website to list the nannies available near you. I worked on this project with one co-worker based in France.
-                        </p>
-
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -533,7 +503,7 @@
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><i class="title-icon fa fa-suitcase"></i>Interships</h4>
+            <h4 class="text-uppercase text-center"><i class="title-icon fa fa-suitcase"></i>Intership</h4>
         </div>
 
         <div id="timeline-experience">
