--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
 
             <!--OPTIONS-->
             <a href="#home"><i class="title-icon fa fa-user"></i>Home</a>
-            <a href="#about"><i class="title-icon fa fa-dashboard"></i>About</a>
+            <a href="#about"><i class="title-icon fa fa-dashboard"></i>About me</a>
             <a href="#education"><i class="title-icon fa fa-graduation-cap"></i>Education</a>
             <a href="#skills"><i class="title-icon fa fa-sliders"></i>Skills</a>
             <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Achievements</a>
+            <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Intership</a>
         </div>
 
         <!-- MENU BUTTON -->
@@ -497,9 +498,9 @@
 
 
 <!--==========================================
-                   ACHIEVEMENTS
+                   INTERHSIPS
 ===========================================-->
-<section id="achievements" class="section">
+<section id="IntershipS" class="section">
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
@@ -618,7 +619,7 @@
     <div class="container">
         <!--FOOTER DETAILS-->
         <p class="text-center">
-            © Abdoulaye DIALLO
+            © Abdoulaye DIALLO 2019
         </p>
     </div>
 </footer>
