--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
             <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>C</h6></div>
+                <div class="timeline-dot"><h6>U</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Statistics and Business intelligence</h6>
+                        <h6 class="timeline-title">Université de Bambey, Senegal</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Université Alioune Diop de Bambey, Senegal</small>
+                                <small>Statistics and Business intelligence</small>
                             </h6>
                             <h6>
                                 <small> 2012 - September 2017</small>
@@ -262,7 +262,7 @@
             <!-- THIRD TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>T</h6></div>
+                <div class="timeline-dot"><h6>B</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
@@ -312,25 +312,25 @@
                                     <h6 class="text-center">Programming</h6>
                                 </div>
                                 <!-- FIRST SKILL BAR -->
-                                <div class="skillbar" data-percent="90%">
+                                <div class="skillbar" data-percent="60%">
                                     <div class="skillbar-title"><span>Python</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">60%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  -->
-                                <div class="skillbar" data-percent="90%">
+                                <div class="skillbar" data-percent="70%">
                                     <div class="skillbar-title"><span>R</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">70</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="70%">
+                                <div class="skillbar" data-percent="60%">
                                     <div class="skillbar-title"><span>SQL</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">60%</div>
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="68%">
+                                <div class="skillbar" data-percent="40%">
                                     <div class="skillbar-title"><span>Scala</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">40%</div>
@@ -342,7 +342,7 @@
                                     <div class="skill-bar-percent">60%</div>
                                 </div>
                                 <!-- SIXTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="80%">
+                                <div class="skillbar" data-percent="40%">
                                     <div class="skillbar-title"><span>JAVA</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">40%</div>
@@ -362,16 +362,16 @@
                                     <div class="skill-bar-percent">100%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  -->
-                                <div class="skillbar" data-percent="85%">
+                                <div class="skillbar" data-percent="80%">
                                     <div class="skillbar-title"><span>English</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">80%</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="70%">
+                                <div class="skillbar" data-percent="40%">
                                     <div class="skillbar-title"><span>Arabic</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">20%</div>
+                                    <div class="skill-bar-percent">40%</div>
                                 </div>
                             </div>
 
@@ -391,7 +391,7 @@
                                 <div class="skillbar" data-percent="70%">
                                     <div class="skillbar-title"><span>Rstudio</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">80%</div>
+                                    <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
                                 <div class="skillbar" data-percent="60%">
@@ -400,13 +400,13 @@
                                     <div class="skill-bar-percent">60%</div>
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="80%">
+                                <div class="skillbar" data-percent="70%">
                                     <div class="skillbar-title"><span>Virtual Studio Code</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- FIFTH SKILL BAR -->
-                                <div class="skillbar" data-percent="80%">
+                                <div class="skillbar" data-percent="50%">
                                     <div class="skillbar-title"><span>Tableau</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">50%</div>
@@ -436,7 +436,7 @@
             <!-- FIRST TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>B</h6></div>
+                <div class="timeline-dot"><h6>D</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
@@ -466,7 +466,7 @@
             <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>F</h6></div>
+                <div class="timeline-dot"><h6>S</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
@@ -512,7 +512,7 @@
             <!-- FIRST TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>I</h6></div>
+                <div class="timeline-dot"><h6>D</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
@@ -544,7 +544,7 @@
             <!-- SECOND TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>F</h6></div>
+                <div class="timeline-dot"><h6>S</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
@@ -573,7 +573,7 @@
             <!-- THIRD TIMELINE -->
             <div class="timeline-block">
                 <!-- DOT -->
-                <div class="timeline-dot"><h6>U</h6></div>
+                <div class="timeline-dot"><h6>N</h6></div>
                 <!-- TIMELINE CONTENT -->
                 <div class="card timeline-content">
                     <div class="card-content">
