--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 </div>
                                 <!-- FIRST SKILL BAR -->
                                 <div class="skillbar" data-percent="60%">
-                                    <div class="skillbar-title"><span>Python</span></div>
+                                    <div class="skillbar-title"><span>HTML5</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">60%</div>
                                 </div>
