--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                         <p>
                             I'm Abdoulaye. data science student at Université Paris 8, I'm interested in machine learning research for development.
                             I'm graduated in Statistics and Business intelligence at Université de Bambey, Senegal where I've taken a many courses in mathematics
-                            and Statistics. I've done two intern in Senegal before I'm move to France. 
-                            currently intern at LIASD laboratory at my main University in Saint-Denis, France.
+                            and Statistics. I've the chance to do two internship in Senegal before I'm move to France. 
+                            currently I'm working as intern at Laboratoire Informatique Avancée de Saint-Denis (LIASD) at my main University.
                         </p>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Big Data et Fouille de donnees </h6>
+                        <h6 class="timeline-title">Big Data and Data mining </h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
@@ -280,8 +280,7 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             From September 2018 to now  I had the chance to study in France. Studying abroad has allowed me firts discovering many things and
-                            to <b>emancipate myself </b>and <b>open myself to the world</b>. In addition to that, in France, I took my first courses
-                            in <b>in big data and deep learning</b>.
+                            to <b>emancipate myself </b>and <b>open myself to the world</b>.
                         </p>
                     </div>
                 </div>
@@ -312,10 +311,10 @@
                                     <h6 class="text-center">Programming</h6>
                                 </div>
                                 <!-- FIRST SKILL BAR -->
-                                <div class="skillbar" data-percent="60%">
-                                    <div class="skillbar-title"><span>HTML5</span></div>
+                                <div class="skillbar" data-percent="70%">
+                                    <div class="skillbar-title"><span>Python</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">60%</div>
+                                    <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  -->
                                 <div class="skillbar" data-percent="70%">
@@ -388,16 +387,16 @@
                                     <div class="skill-bar-percent">80%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  -->
-                                <div class="skillbar" data-percent="70%">
+                                <div class="skillbar" data-percent="90%">
                                     <div class="skillbar-title"><span>Rstudio</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">70%</div>
+                                    <div class="skill-bar-percent">90%</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="60%">
-                                    <div class="skillbar-title"><span>Android Studio</span></div>
+                                <div class="skillbar" data-percent="70%">
+                                    <div class="skillbar-title"><span>Dataiku </span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">60%</div>
+                                    <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
                                 <div class="skillbar" data-percent="70%">
@@ -406,10 +405,10 @@
                                     <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- FIFTH SKILL BAR -->
-                                <div class="skillbar" data-percent="50%">
+                                <div class="skillbar" data-percent="80%">
                                     <div class="skillbar-title"><span>Tableau</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">50%</div>
+                                    <div class="skill-bar-percent">80%</div>
                                 </div>
                             </div>
                         </div>
