percentages on bare and french char

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">place</i></span>
-                                            <span class="content">93380 Ile-de-France</span>
+                                            <span class="content">Pierrefitte, Ile-de-France</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">commute</i></span>
