--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <!-- NAME & STATUS -->
                                 <div class="info-headings">
                                     <h4 class="text-uppercase left">Abdoulaye DIALLO</h4>
-                                    <h6 class="text-capitalize left">Big Data Student</h6>
+                                    <h6 class="text-capitalize left">Data Science Student</h6>
                                 </div>
 
                                 <!-- CONTACT INFO -->
