--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                             <span class="content">28 years old</span>
                                         </li>
                                         <li class="clearfix">
-                                            <span class="title"><i class="material-icons">email</i></span>
+                                            <span class="title"><i class="material-icons">e-mail</i></span>
                                             <span class="content">ablaye0m@gmail.com</span>
                                         </li>
                                         <li class="clearfix">
