--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <!--LINKS-->
                                 <div class="links">
                                     <!-- TWITTER-->
-                                    <a href="https://twitter.com/dataflowus" class="social  btn-floating blue"><i
+                                    <a href="https://twitter.com/abdoolsn" class="social  btn-floating blue"><i
                                             class="fa fa-twitter"></i></a>
                                     <!-- LINKEDIN-->
                                     <a href="https://www.linkedin.com/in/abdoulsn/" class="social  btn-floating blue darken-3"><i
@@ -171,7 +171,7 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            I'm Abdoulaye. data science student at Université Paris 8, I'm interested in machine learning research for development.
+                            I'm Abdoulaye. data science student at Université Paris 8, I'm interested in machine learning research for development and for Business.
                             I'm graduated in Statistics and Business intelligence at Université de Bambey, Senegal where I've taken a many courses in mathematics
                             and Statistics. I've the chance to do two internship in Senegal before I'm move to France. 
                             currently I'm working as intern at Laboratoire Informatique Avancée de Saint-Denis (LIASD) at my main University.
