--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                             This project is a modeling of credit card holders, the goal is to predict a holder's default over
                             12-month horizon. In short, it is about detecting "bad payers" from a series of characteristics
                             measured on individuals, in order to grant or refuse a financial loan.
-                            keywords: SAS, Logistic regression, financial data, data wrangling
+                            <b>keywords</b>b>: SAS, Logistic regression, financial data, data wrangling
                         </p>
                         <!-- BUTTON TRIGGER MODAL -->
                         <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-1">
@@ -671,8 +671,9 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             In this project we had to scrape data in the web and apply deeplearning algorithm. Scraping rss news,
-                            clean them by using BeautifulSoup and regex, describe the data before applying machine leatning model.
-                        <b>Keyword</b>: rss, regex, text mining, CNN, Naives Bayes
+                            clean them by using BeautifulSoup and regex, describe the data before applying machine leatning model.  
+
+                        <b>Keywords</b>: rss, regex, text mining, CNN, Naives Bayes
                             
                         </p>
                     </div>
@@ -702,8 +703,9 @@
                         <p>
                             Random forest applied to weather data ,
                             Random forest applied to Diabets data ,
-                            Data viz using QlikView, Tableau and Dataiku on Financial and Sales data.
-                        <b>Keyword</b>: Data viz, machine learning                            
+                            Data viz using QlikView, Tableau and Dataiku on Financial and Sales data. 
+
+                        <b>Keywords</b>: Data viz, machine learning                            
                         </p>
                     </div>
                 </div>
