updating academic project

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Customer Churn</h6>
+                        <h6 class="timeline-title">Customer Churn modeling</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
@@ -639,7 +639,7 @@
                             This project is a modeling of credit card holders, the goal is to predict a holder's default over
                             12-month horizon. In short, it is about detecting "bad payers" from a series of characteristics
                             measured on individuals, in order to grant or refuse a financial loan.
-                            <b>keywords</b>b>: SAS, Logistic regression, financial data, data wrangling
+                            <p><b>keywords</b>b>: SAS, Logistic regression, financial data, data wrangling</p>
                         </p>
                         <!-- BUTTON TRIGGER MODAL -->
                         <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-1">
