--- a/index.html
+++ b/index.html
@@ -639,7 +639,8 @@
                             This project is a modeling of credit card holders, the goal is to predict a holder's default over
                             12-month horizon. In short, it is about detecting "bad payers" from a series of characteristics
                             measured on individuals, in order to grant or refuse a financial loan.
-                            <p><b>keywords</b>b>: SAS, Logistic regression, financial data, data wrangling</p>
+
+                            <p> <b>keywords</b>: SAS, Logistic regression, financial data, data wrangling</p>
                         </p>
                         <!-- BUTTON TRIGGER MODAL -->
                         <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-1">
@@ -673,7 +674,7 @@
                             In this project we had to scrape data in the web and apply deeplearning algorithm. Scraping rss news,
                             clean them by using BeautifulSoup and regex, describe the data before applying machine leatning model.  
 
-                        <b>Keywords</b>: rss, regex, text mining, CNN, Naives Bayes
+                        <p> <b>Keywords</b>: rss, regex, text mining, CNN, Naives Bayes </p>
                             
                         </p>
                     </div>
