--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <!-- NAME & STATUS -->
                                 <div class="info-headings">
                                     <h4 class="text-uppercase left">Abdoulaye DIALLO</h4>
-                                    <h6 class="text-capitalize left">Data Science Student</h6>
+                                    <h6 class="text-capitalize left">Data Scientist</h6>
                                 </div>
 
                                 <!-- CONTACT INFO -->
@@ -131,7 +131,7 @@
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">place</i></span>
-                                            <span class="content">Pierrefitte, Ile-de-France</span>
+                                            <span class="content">Ile-de-France</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">commute</i></span>
@@ -171,10 +171,10 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            I'm Abdoulaye. data science student at Université Paris 8, I'm interested in machine learning research for development and for Business.
-                            I'm graduated in Statistics and Business intelligence at Université de Bambey, Senegal where I've taken a many courses in mathematics
+                            I'm Abdoulaye. big data student at Université Paris 8, I'm interested in machine learning research for development and for Business.
+                            I'm graduated in Statistics and Business intelligence at Université of Bambey in Senegal where I've taken a many courses in mathematics
                             and Statistics. I've the chance to do two internship in Senegal before I'm move to France. 
-                            currently I'm working as intern at Laboratoire Informatique Avancée de Saint-Denis (LIASD) at my main University.
+                            currently I'm working as apprentice at Allianz as data scientist.
                         </p>
                     </div>
                 </div>
@@ -252,7 +252,7 @@
                             
                             <br><br><li><b>Statistics: Modelisation, Estimation and Test, Survey methods, Data analysis</b></li>
                             <br><li><b>mathematics: Probabilty, Algebra, time series </b></li>
-                            <br><li><b>Data Explolatory: R STATA SPSS SAS SQL </b></li>
+                            <br><li><b>Data Explolatory: R SPSS SAS SQL </b></li>
                             <br><li><b>Information systems management</b></li>
                         </p>
                     </div>
@@ -330,7 +330,7 @@
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
                                 <div class="skillbar" data-percent="40%">
-                                    <div class="skillbar-title"><span>Scala</span></div>
+                                    <div class="skillbar-title"><span>starter in Scala</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">40%</div>
                                 </div>
@@ -366,12 +366,6 @@
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">80%</div>
                                 </div>
-                                <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="40%">
-                                    <div class="skillbar-title"><span>Arabic</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">40%</div>
-                                </div>
                             </div>
 
 
@@ -390,7 +384,7 @@
                                 <div class="skillbar" data-percent="90%">
                                     <div class="skillbar-title"><span>Rstudio</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">90%</div>
+                                    <div class="skill-bar-percent">80%</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
                                 <div class="skillbar" data-percent="70%">
@@ -399,11 +393,6 @@
                                     <div class="skill-bar-percent">70%</div>
                                 </div>
                                 <!-- FOURTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="70%">
-                                    <div class="skillbar-title"><span>Virtual Studio Code</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">70%</div>
-                                </div>
                                 <!-- FIFTH SKILL BAR -->
                                 <div class="skillbar" data-percent="80%">
                                     <div class="skillbar-title"><span>Tableau</span></div>
@@ -470,7 +459,7 @@
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">SAS customer churn modeling for financial bank</h6>
+                        <h6 class="timeline-title">customer churn modeling for financial bank</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
@@ -674,7 +663,7 @@
                             In this project we had to scrape data in the web and apply deeplearning algorithm. Scraping rss news,
                             clean them by using BeautifulSoup and regex, describe the data before applying machine leatning model.  
 
-                        <p> <b>Keywords</b>: rss, regex, text mining, CNN, Naives Bayes </p>
+                        <p> <b>Keywords</b>: rss, regex, text mining, deep learning algorithms, Naives Bayes </p>
                             
                         </p>
                     </div>
