--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <!--LINKS-->
                                 <div class="links">
                                     <!-- TWITTER-->
-                                    <a href="https://twitter.com/abdoolsn" class="social  btn-floating blue"><i
+                                    <a href="https://twitter.com/abdoulun" class="social  btn-floating blue"><i
                                             class="fa fa-twitter"></i></a>
                                     <!-- LINKEDIN-->
                                     <a href="https://www.linkedin.com/in/abdoulsn/" class="social  btn-floating blue darken-3"><i
