--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
             <a href="#education"><i class="title-icon fa fa-graduation-cap"></i>Education</a>
             <a href="#skills"><i class="title-icon fa fa-sliders"></i>Skills</a>
             <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Achievements</a>
+
+            <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Certifications</a>
             <a href="#experience"><i class="title-icon fa fa-suitcase"></i>Experiences</a>
         </div>
 
@@ -310,28 +312,22 @@
                                     <h6 class="text-center">Programming</h6>
                                 </div>
                                 <!-- FIRST SKILL BAR -->
-                                <div class="skillbar" data-percent="80%">
+                                <div class="skillbar" data-percent="85%">
                                     <div class="skillbar-title"><span>Python</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">80%</div>
+                                    <div class="skill-bar-percent">85%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  --> 
-                                <div class="skillbar" data-percent="50%">
+                                <div class="skillbar" data-percent="65%">
                                     <div class="skillbar-title"><span>R</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">50</div>
+                                    <div class="skill-bar-percent">65</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="70%">
-                                    <div class="skillbar-title"><span>SQL</span></div>
+                                <div class="skillbar" data-percent="65%">
+                                    <div class="skillbar-title"><span>Pyspark</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">70%</div>
-                                </div>
-                                <!-- FOURTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="40%">
-                                    <div class="skillbar-title"><span>starter in Scala</span></div>
-                                    <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">40%</div>
+                                    <div class="skill-bar-percent">65%</div>
                                 </div>
                                 <!-- FIFTH SKILL BAR  -->
                                 <div class="skillbar" data-percent="60%">
@@ -391,7 +387,11 @@
                                     <div class="skillbar-title"><span>Tableau</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">80%</div>
-                                </div>
+                                <div class="skillbar" data-percent="80%">
+                                    <div class="skillbar-title"><span>MicroStrategy</span></div>
+                                    <div class="skillbar-bar"></div>
+                                    <div class="skill-bar-percent">80%</div>
+                            </div>
                             </div>
                         </div>
                     </div>
