--- a/index.html
+++ b/index.html
@@ -312,25 +312,25 @@
                                     <h6 class="text-center">Programming</h6>
                                 </div>
                                 <!-- FIRST SKILL BAR -->
-                                <div class="skillbar" data-percent="85%">
+                                <div class="skillbar">
                                     <div class="skillbar-title"><span>Python</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">85%</div>
                                 </div>
                                 <!-- SECOND SKILL BAR  --> 
-                                <div class="skillbar" data-percent="65%">
+                                <div class="skillbar">
                                     <div class="skillbar-title"><span>R</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">65</div>
                                 </div>
                                 <!-- THIRD SKILL BAR  -->
-                                <div class="skillbar" data-percent="65%">
+                                <div class="skillbar">
                                     <div class="skillbar-title"><span>Pyspark</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">65%</div>
                                 </div>
                                 <!-- FIFTH SKILL BAR  -->
-                                <div class="skillbar" data-percent="60%">
+                                <div class="skillbar">
                                     <div class="skillbar-title"><span>SAS</span></div>
                                     <div class="skillbar-bar"></div>
                                     <div class="skill-bar-percent">60%</div>
