--- a/index.html
+++ b/index.html
@@ -173,10 +173,7 @@
                     <div class="card-content">
                         <!-- ABOUT PARAGRAPH -->
                         <p>
-                            I'm Abdoulaye, big data student at Université Paris 8, I'm interested in machine learning since the first time I discovered years ago.
-                            I'm graduated in Statistics and Business intelligence at University Bambey in Senegal where I've taken many courses in mathematics
-                            and Statistics. I've the chance to gain experiences by doing internship in Senegal before I'm move to France. 
-                            currently I'm working as data scientist at Allianz France.
+                            Fail fast and retry.
                         </p>
                     </div>
                 </div>
@@ -212,7 +209,7 @@
                                 <small>Lycée Malick Sall de Louga, Senegal</small>
                             </h6>
                             <h6>
-                                <small> 2008-2011</small>
+                                <small> 2009-2012</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
