--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                 <div class="card timeline-content">
                     <div class="card-content">
                         <!-- TIMELINE TITLE -->
-                        <h6 class="timeline-title">Big Data and Data mining </h6>
+                        <h6 class="timeline-title">Université Paris 8 Vincennes</h6>
                         <!-- TIMELINE TITLE INFO -->
                         <div class="timeline-info">
                             <h6>
-                                <small>Université Paris 8 Vincennes</small>
+                                <small>Big Data and Data mining</small>
                             </h6>
                             <h6>
                                 <small>Sep 2018 - Sep 2020</small>
@@ -295,7 +295,7 @@
                                 <div class="skillbar" data-percent="80%">
                                     <div class="skillbar-title"><span>Pyspark</span></div>
                                     <div class="skillbar-bar"></div>
-                                    <div class="skill-bar-percent">800%</div>
+                                    <div class="skill-bar-percent">80%</div>
                                 </div>
                                 <!-- FIFTH SKILL BAR  -->
                                 <div class="skillbar" data-percent="60%">
@@ -644,7 +644,7 @@
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
-                            <a href="http://www.linkedin.com/learning/gdpr-compliance-essential-training?trk=flagship-lil_details_certification" target="_blank" rel="noopener noreferrer">Certificat</a>
+                            <a href="http://www.linkedin.com/learning/gdpr-compliance-essential-training?trk=flagship-lil_details_certification" target="_blank" rel="noopener noreferrer">Link to certificate</a>
                         <p><b>Keywords</b>: GDPR, Data privacy</p>                          
                         </p>
                     </div>
