--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">email</i></span>
-                                            <span class="content">REMOVEablaye0mREMOVE@REMOVEgmail[].]com</span>
+                                            <span class="content">REMOVEablaye0mREMOVE((at))REMOVEgmail[].]com</span>
                                         </li>
                                         <li class="clearfix">
                                             <span class="title"><i class="material-icons">phone</i></span>
