--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
                                 <small>Statistics </small>
                             </h6>
                             <h6>
-                                <small> 2012 - September 2017</small>
+                                <small> September 2017</small>
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
-                            I've graduated in this University for my bachelor and master degree.
+                            I've graduated in this University for my bachelor degree.
                             
                             <br><br><li><b>Statistics: Modeling, Test, Survey methods, Data analysis</b></li>
                             <br><li><b>mathematics: Probabilty, Algebra, time series </b></li>
