--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             </h6>
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
-                        <p>Formation spécialisé en Data science pour la connaissance client riche en soft skills et bagages mathématiques et marketing</p>
+                        <p>Training "Data science pour la connaissance client" is rich in soft skills, statistics and marketing background</p>
                     </div>
                 </div>
             </div>
@@ -272,11 +272,6 @@
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
                             I've graduated in this University for my bachelor degree.
-                            
-                            <br><br><li><b>Statistics: Modeling, Test, Survey methods, Data analysis</b></li>
-                            <br><li><b>mathematics: Probabilty, Algebra, time series </b></li>
-                            <br><li><b>Data Explolatory: R, SPSS, SAS, SQL </b></li>
-                            <br><li><b>Information systems management</b></li>
                         </p>
                     </div>
                 </div>
