--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <!--LINKS-->
                                 <div class="links">
                                     <!-- TWITTER-->
-                                    <a href="https://twitter.com/abdoulun" class="social  btn-floating blue"><i
+                                    <a href="https://twitter.com/4bdoulaye" class="social  btn-floating blue"><i
                                             class="fa fa-twitter"></i></a>
                                     <!-- LINKEDIN-->
                                     <a href="https://www.linkedin.com/in/abdoulsn/" class="social  btn-floating blue darken-3"><i
@@ -472,11 +472,11 @@
 <!--==========================================
                    INTERHSIPS
 ===========================================-->
-<section id="IntershipS" class="section">
+<section id="Apprenticeship" class="section">
     <div class="container">
         <!-- SECTION TITLE -->
         <div class="section-title">
-            <h4 class="text-uppercase text-center"><i class="title-icon fa fa-suitcase"></i>Internship</h4>
+            <h4 class="text-uppercase text-center"><i class="title-icon fa fa-suitcase"></i>Apprenticeship</h4>
         </div>
 
         <div id="timeline-experience">
@@ -530,7 +530,7 @@
                         </div>
                         <!-- TIMELINE PARAGRAPH -->
                         <p>
-                            The recognition of emotional states is a relatively becoming a technique in research, in this internship I'm working in emotion 
+                            The recognition of emotional states is a relatively becoming a technique in research, in this Apprenticeship I'm working in emotion 
                             prediction using audios files and deep learning algorithms.
                         </p>
 
@@ -882,7 +882,7 @@
     <div class="container">
         <!--FOOTER DETAILS-->
         <p class="text-center">
-            © Abdoulaye D. 2021
+            © Abdoulaye D. 2024
         </p>
     </div>
 </footer>
