--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Abdoulaye DIALLO - Data Engineer</title>
-  <link rel="stylesheet" href="stylesheets/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <section id="experience" class="section">
+  <section id="experiences" class="section">
     <div class="container">
       <h2>Experience</h2>
       <div class="experience-item">
@@ -149,15 +149,21 @@
     </div>
   </section>
 
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <p><strong>Location:</strong> Île-de-France, France</p>
-      <p><strong>Email:</strong> <a href="mailto:abl(!)aye0m@gmail.com">abl(!)aye0m@gmail.com</a></p>
-      <p><strong>Phone:</strong> 0(sept)54491234</p>
+<section id="contact" class="section">
+  <div class="container" style="text-align: center;">
+    <h2>Contact</h2>
+    <div class="contact-details">
+      <span><strong>Location:</strong> Île-de-France, France</span>
+      <span><strong>Email:</strong> <a href="mailto:abl(!)aye0m@gmail.com">abl(!)aye0m@gmail.com</a></span>
+      <span><strong>Phone:</strong> 0(sept)54491234</span>
+    </div>
+    <div class="contact-github">
       <p>You can also find me on <a href="https://github.com/abdoulsn" target="_blank">GitHub</a>.</p>
     </div>
-  </section>
+  </div>
+</section>
+
+
 
   <footer>
     <div class="container">
