--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#experiences">Experiences</a></li>
           <li><a href="#education">Education</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#certifications">Certifications</a></li>
@@ -41,7 +41,7 @@
 
   <section id="experiences" class="section">
     <div class="container">
-      <h2>Experience</h2>
+      <h2>Experiences</h2>
       <div class="experience-item">
         <h3>ACCENTURE - Data Engineer (09/2024 - Present)</h3>
         <p><strong>Client:</strong> Allianz Technology France – Team Data Lakehouse</p>
@@ -158,7 +158,7 @@
       <span><strong>Phone:</strong> 0(sept)54491234</span>
     </div>
     <div class="contact-github">
-      <p>You can also find me on <a href="https://github.com/abdoulsn" target="_blank">GitHub</a>.</p>
+      <p>find me on <a href="https://github.com/abdoulsn" target="_blank">GitHub</a>.</p>
     </div>
   </div>
 </section>
